# aifsd-promo-engine

./: .gitignore  README.md  plan.md  pyproject.toml  spec.md
promo_engine/: domain.py  engine.py  promotions.py
promo_engine/tests/: test_domain.py  test_engine.py  test_percent_off_skus.py  test_promotions_extended.py
